// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DomainStatusTag should render for blocked status 1`] = `
<Tooltip
  content="This domain is not available for use. For more information, please contact support."
  dark={true}
>
  <Tag
    color="red"
  >
    <ErrorOutline
      size={15}
    />
    <span>
       Blocked
    </span>
  </Tag>
</Tooltip>
`;

exports[`Component: DomainStatusTag should render for pending status 1`] = `
<Tooltip
  content="This domain is pending review, please check back again soon."
  dark={true}
>
  <Tag>
    <Schedule
      size={15}
    />
    <span>
       Pending
    </span>
  </Tag>
</Tooltip>
`;

exports[`Component: DomainStatusTag should render for unverified status 1`] = `
<Tooltip
  content="This domain must be verified before use."
  dark={true}
>
  <Tag
    color="yellow"
  >
    <ErrorOutline
      size={15}
    />
    <span>
       Unverified
    </span>
  </Tag>
</Tooltip>
`;

exports[`Component: DomainStatusTag should render for verified status 1`] = `
<Tag>
  Verified
</Tag>
`;

exports[`Component: DomainStatusTag should render null without status 1`] = `""`;
